# Magnesium

./: .gitignore  Cargo.toml  meson.build
build-aux/: cargo.sh
data/: dev.sp1rit.efg.Desktop.desktop.in  dev.sp1rit.efg.Desktop.gschema.xml  efg.gresource.xml  efg.scss  meson.build
data/ui/: block.ui  prefs.ui  timetable.ui  window.ui
src/: application.rs  config.rs.in  main.rs  meson.build
src/efg/: mod.rs  preferences.rs
src/efg/timetable/: blocks.rs  mod.rs
src/models/: secret.rs
