[package]
name = "magnesium"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
once_cell = "1.8"
libc = "0.2"
chrono = "0.4"
secret-service = "2.0"
futures = "0.3"
# async-std = "1.10.0"

[dependencies.sm]
package = "libschulmanager"
path = "../schulmanager/libschulmanager"
features = ["microsoft"]

[dependencies.gtk]
package = "gtk4"
version = "0.3"
features = ["v4_4"]

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
